2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/wms.py:
	  Clean up pychecker warnings.

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* Makefile.am:
	* env:
	  Prod randomly so that distcheck passes

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Get rid of remaining TODO.
	  Now I just need to make it work reliably and/or on more than one
	  system!

2007-04-10  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/Makefile.am:
	* flumotion/component/producers/digest.py:
	* flumotion/component/producers/wms.py:
	* flumotion/component/producers/wms.xml:
	  Rewrite to factor authentication out into a helper class, and a
	  separate bouncer.

2007-04-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Parse more of header.
	  Parse more of payload headers.
	  Use this for correct marking of delta unit in buffers.

2007-04-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py
	  (WMAEncoder.get_pipeline_string):
	  Add drop-probability identity for now to force things to stay in
	  sync.  0.01 % is about 1 buffer every 5 minutes for 48Khz streams.

2007-04-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/producers/asfparse.py:
	  Get it working again; EOS handling didn't quite work. At all.

2007-04-04  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/encoders/wmv/wmv.py:
	  Remove incorrect duplicate method (thanks pychecker!)

	* flumotion/component/producers/asfparse.py:
	  Handle EOS correctly.

	* flumotion/component/producers/wms.py:
	  Minor comment updates.

	* misc/pycheckerrc:
	  Raise max returns limit to 11.

2007-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wma/wma.py:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/muxers/asf/asf.py: