@@ -1,3 +1,9 @@
+2007-04-11  Michael Smith  <msmith@fluendo.com>
+
+	* flumotion/component/producers/asfparse.py:
+	  Handle encoder disconnection more gracefully, so we can reconnect an
+	  encoder later and have it work again.
+
 2007-04-10  Michael Smith  <msmith@fluendo.com>
 
 	* flumotion/component/producers/wms.py:
